Bug 920017 - Race condition in BackgroundFileSaver when setTarget is called multiple times in append mode. r=mcmanus